--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,63 @@
+appnope==0.1.3
+attrs==22.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+cachetools==5.2.1
+certifi==2022.12.7
+chardet==3.0.4
+click==8.1.3
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+fastjsonschema==2.16.2
 Flask==2.2.3
+google-auth==1.4.2
 gunicorn==20.1.0
+idna==2.8
+iniconfig==2.0.0
+ipython-genutils==0.2.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter_core==5.1.3
+jupyterlab-pygments==0.2.2
+Lasagne==0.1
+MarkupSafe==2.1.1
+mistune==2.0.4
+nest-asyncio==1.5.6
+nltk==3.8.1
+numpy==1.24.1
+packaging==23.0
+pandocfilters==1.5.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.6.2
+pluggy==1.0.0
+portpicker==1.2.0
+prompt-toolkit==1.0.18
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.14.0
+pyrsistent==0.19.3
+pytest==7.2.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+pyzmq==25.0.0
+regex==2022.10.31
 requests==2.21.0
+rsa==4.9
+simplegeneric==0.8.1
+six==1.12.0
+soupsieve==2.3.2.post1
+terminado==0.13.3
+tinycss2==1.2.1
+tornado==4.5.3
+tqdm==4.64.1
+traitlets==5.8.1
+urllib3==1.24.3
 waitress==2.1.2
+wcwidth==0.2.6
+webencodings==0.5.1
+Werkzeug==2.2.3
